--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Japonês Afiações - Site Oficial</title>
 </head>
 <body>
     
+
+    <script type="module"></script>
 </body>
 </html>
