--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Japonês Afiações - Site Oficial</title>
 </head>
 <body>
-    
+    <nav>
+        <li><a href="">Home</a></li>
+        <li><a href="">Sobre nós</a></li>
+        <li><a href="">Seja um afiador</a></li>
+        <li><a href="">FAQ</a></li>
+        <li><a href="">Contato</a></li>
+    </nav>
+    <section id="secao-sobre">
+
+    </section>
+    <section id="secao-seja">
+
+    </section>
+    <section id="faq">
+
+    </section>
 
     <script type="module"></script>
 </body>
